--- a/koi-vet-app/package.json
+++ b/koi-vet-app/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.4",
     "font-awesome-icons": "^1.6.0",
     "framer-motion": "^11.11.8",
+    "html-react-parser": "^5.1.18",
     "js-cookie": "^3.0.5",
     "mapbox-gl": "^2.9.1",
     "react": "^18.3.1",
