--- a/koi-vet-app/package.json
+++ b/koi-vet-app/package.json
@@ -25,6 +25,7 @@
     "html-react-parser": "^5.1.18",
     "js-cookie": "^3.0.5",
     "mapbox-gl": "^2.9.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-bootstrap-icons": "^1.11.4",
