--- a/koi-vet-app/package.json
+++ b/koi-vet-app/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.11.8",
     "html-react-parser": "^5.1.18",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.453.0",
     "mapbox-gl": "^2.9.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
