--- a/koi-vet-app/package.json
+++ b/koi-vet-app/package.json
@@ -11,6 +11,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -35,7 +36,7 @@
     "react-map-gl": "^7.1.7",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
