--- a/koi-vet-app/package.json
+++ b/koi-vet-app/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.4",
     "@react-google-maps/api": "^2.20.3",
