--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,14 +31,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
 
-    - name: Set Environment Variables
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
-        GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.GOOGLE_OAUTH_CLIENT_ID }}
-        GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.GOOGLE_OAUTH_CLIENT_SECRET }}
-      run: echo "Environment variables are set."
+    - name: Create .env file
+      working-directory: Koi-Center-Backend
+      run: |
+        echo "${{ secrets.DOTENV_FILE }}" > .env
+        cat .env  # Chỉ để kiểm tra file .env được tạo, xóa lệnh này nếu không cần.
 
     - name: Build Backend
       working-directory: Koi-Center-Backend
