--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,43 +1,17 @@
-name: CD - Deploy Backend and Frontend
+name: CI/CD - Build and Deploy Frontend and Backend
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  deploy-backend:
-    name: Deploy Backend
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: 17
-        distribution: temurin
-
-    - name: Build Backend
-      working-directory: Koi-Center-Backend
-      run: mvn clean package
-
-    - name: Setup SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H 178.128.86.47 >> ~/.ssh/known_hosts
-
-    - name: Deploy Backend
-      run: |
-        scp Koi-Center-Backend/target/*.jar root@178.128.86.47:/backend-koi-vet/
-        ssh root@178.128.86.47 "sudo systemctl restart koi-backend.service"
-
-  deploy-frontend:
-    name: Deploy Frontend
+  # CI/CD cho Frontend
+  frontend:
+    name: Build and Deploy Frontend
     runs-on: ubuntu-latest
 
     steps:
@@ -49,23 +23,65 @@ jobs:
       with:
         node-version: 18.20.4
 
-    - name: Install Dependencies
+    - name: Install Frontend Dependencies
       working-directory: koi-vet-app
       run: npm ci
 
     - name: Build Frontend
       working-directory: koi-vet-app
-      run: npm run build
-
-    - name: Setup SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SERVER_SSH_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H 178.128.86.47 >> ~/.ssh/known_hosts
+      run: CI=false npm run build
 
     - name: Deploy Frontend
+      env:
+        SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
       run: |
+        mkdir -p ~/.ssh
+        echo "$SERVER_SSH_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H 178.128.86.47 >> ~/.ssh/known_hosts
         ssh root@178.128.86.47 "rm -rf /var/www/frontend/*"
         scp -r koi-vet-app/build/* root@178.128.86.47:/var/www/frontend/
         ssh root@178.128.86.47 "sudo systemctl reload nginx"
+
+  # CI/CD cho Backend
+  backend:
+    name: Build and Deploy Backend
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: 17
+        distribution: temurin
+
+    - name: Cache Maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/Koi-Center-Backend/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+
+    - name: Create .env file
+      working-directory: Koi-Center-Backend
+      run: |
+        echo "${{ secrets.DOTENV_FILE }}" > .env
+        cat .env  # Chỉ để kiểm tra file .env được tạo, xóa lệnh này nếu không cần.
+
+    - name: Build Backend
+      working-directory: Koi-Center-Backend
+      run: mvn clean package
+
+    - name: Deploy Backend
+      env:
+        SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+      run: |
+        mkdir -p ~/.ssh
+        echo "$SERVER_SSH_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H 178.128.86.47 >> ~/.ssh/known_hosts
+        scp Koi-Center-Backend/target/*.jar root@178.128.86.47:/backend-koi-vet/
+        ssh root@178.128.86.47 "sudo systemctl restart koi-backend.service"
